<resources>
    <string name="app_name">AE Crystal Files</string>
    <string name="hamburger_icon">hamburger</string>
    <string name="search">search</string>
    <string name="back">back</string>
    <string name="after">after</string>
    <string name="reproductor">Reproductor de Música</string>
    <string name="pause_play">pause play</string>
    <string name="icon">icon</string>
    <string name="artistas">Artistas</string>
    <string name="albumes">Álbumes</string>
    <string name="canciones">Canciones</string>
    <string name="generos">Géneros</string>
    <string name="listas_reproduccion">Listas de Reproducción</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="fondo">Fondo de pantalla</string>
    <string name="imagen">imagen</string>
    <string name="color">color</string>
    <string name="negro">negro</string>
    <string name="storage">storage</string>
    <string name="storage_"><u>storage/</u></string>
    <string name="Storage">Storage</string>
    <string name="zapya">zapya</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="copiar">Copiar</string>
    <string name="cortar">Cortar</string>
    <string name="eliminar">Eliminar</string>
    <string name="rename">rename</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">OK</string>
    <string name="selected">%1$s/%2$s</string>
    <string name="abrir_con">Abrir como:</string>
    <string name="compartir">Compartir</string>
    <string name="pegar">pegar</string>
    <string name="renombrarMultiple">Renombrar Múltiple</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numeros">0, 1, 2, 3</string>
    <string name="aceptar">Aceptar</string>
    <string name="agrega_un_nuevo_nombre">Agrega un nuevo nombre</string>
    <string name="anexar_nombre_al_original">Anexar nombre al original</string>
    <string name="numbers">Numeros</string>
    <string name="renombrar_extension">Renombrar extension</string>
    <string name="mas">mas</string>
    <string name="propiedades">Propiedades</string>
    <string name="buscar">Buscar</string>
    <string name="local">Local</string>
    <string name="drive">Drive</string>
    <string name="nuevo">nuevo</string>
    <string name="cancelar_">cancelar</string>
    <string name="AE_Pictures">AE Images</string>
    <string name="AE_Editor_de_texto">AE Editor</string>
    <string name="Ruta_por_defecto">Ruta por defecto</string>
    <string name="preferencias">Preferencias</string>
    <string name="default_winow">Ventana por defecto</string>
    <string name="fondo_por_defecto">fondo por defecto</string>
    <string name="downloads">Downloads</string>
    <string name="comprimir">Comprimir</string>
    <string name="password">Contraseña</string>
    <string name="Descomprimir">Descomprimir</string>
    <string name="AE_compress">AE Compress Viewr</string>
    <string name="color_scheme">Esquema de color</string>
    <string name="extract_from_bg">Esquema de color automático</string>
    <string name="green">green</string>
    <string name="zero_zero">00:00</string>
    <string name="background">background</string>
    <string name="agregar_a_list">Agregar a lista ...</string>
    <string name="use_like_tone">Usar como tono ...</string>
    <string name="create_new_list">CREAR NUEVA LISTA</string>
    <string name="ecualizador">Ecualizador</string>
    <string name="equalizador">Ecualizador</string>
    <string name="icon_packs">Paquetes de iconos</string>
    <string name="new_icon_pack">Agregar nuevo paquete de icoos</string>
    <string name="imagenes">Imágenes</string>
    <string name="musica">Música</string>
    <string name="videos">Videos</string>
    <string name="libros">Libros</string>
    <string name="apps">Apps</string>
    <string name="loading">Cargando...</string>
</resources>