<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <com.github.mmin18.widget.RealtimeBlurView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:realtimeBlurRadius="15dp"
        app:realtimeOverlayColor="@color/almostBlackGlass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_view_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_file_chooser_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/seleccionar"
            android:textColor="@color/white"
            android:textSize="17sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/file_chooser_back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:src="@drawable/edit_back"
                android:contentDescription="@string/back" />
            <EditText
                android:inputType="none"
                android:editable="false"
                android:hint="@string/storage_"
                android:textColorHint="@color/green"
                android:autofillHints="username"
                android:textColor="@color/green"
                android:textStyle=""
                android:layout_marginEnd="15dp"
                android:background="@drawable/et_background_selector"
                android:id="@+id/et_file_chooser_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_file_chooser_dialog"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/file_chooser_negative_btn"
                style="@style/BlueButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/file_chooser_positive_btn"
                style="@style/BlueButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/aceptar" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>