<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        tools:background="@color/black"
        android:layout_height="wrap_content">

        <com.github.mmin18.widget.RealtimeBlurView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:realtimeBlurRadius="10dp"
            app:realtimeOverlayColor="@color/almostBlackGlass" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_view_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/rename_style_dialog_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/color"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--
            com.example.crystalfiles.model.filemanipulation.OneStyleDialogView
             -->


            <com.hallen.rfilemanager.ui.view.custom.colorchooser.ColorLayout
                android:id="@+id/colorChooser"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rename_style_negative_btn"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cancelar" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rename_style_positive_btn"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/aceptar" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>